 - Fixed text on 'Download All' button to not display HTML.
 - Add patch for workbench_moderation to avoid php shutdown function errors.
 - Removed 'Back to dataset' button on standalone resources.
 - Better support of downloading remote files from the resource view page
   "Download" button.
 - Removed warning when a resource is created without title.

7.x-1.12.11 2016-10-20
--------------------------
- Fixed a bug in Recline regarding file objects and node forms that caused errors when using the "view changes" button on Dataset or Resource edit form
- Center group images in "Groups" page and group node page sidebar
- Add "2x" "3x" etc to datset teasers when more than one resource of a particular format present.
- Update the default jquery library setting from 1.7 to 1.10
- Fix topics menu and facet links if special characters are used in topic terms.
- Fix form redirect issues on dataset form validation
- Patch fontyourface to remove <div> from the "standard text" selector, to prevent unpredictable results from this option
- Fixed issue in open_data_schema_map with "Data Dictionary" field not displaying URL in data.json file


7.x-1.12.10 2016-09-07
--------------------------
 - Fix JS error on IE browsers preventing previews from appearing
 - Provide upgrade paths for older sites upgrading to newer BU editor config


7.x-1-12.9 2016-08-31
--------------------------
 - Fix data dictionary field to use html input format and improvements to the field's display and help text.
 - Update dkan_workflow content type legend to include all content types with correct icons.
 - Fix to new bug introduced in recline module in 1.12.7; previews would not display if file smaller than max preview size, even if loading from datastore.
 - Fix a problem with paths for image icons for topics. Uploaded image icons will now display correctly in the Topics menu.


7.x-1.12.8 2016-08-19
--------------------------