@@ -106,6 +106,7 @@ DKAN Dataset:
  - Better support of downloading remote files from the resource view page
    "Download" button.
  - Removed warning when a resource is created without title.
+ - Improved download of remote files.
 
 7.x-1.12.11 2016-10-20
 --------------------------
